base/ingress/keycloak-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: candig
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
    # If you need to pin a specific cert on AppGW listener:
    # appgw.ingress.kubernetes.io/appgw-ssl-certificate: dhdpcert
spec:
  rules:
    - host: keycloak.CHANGE-ME.dhdp.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-service
                port:
                  number: 8080
