base/ingress/tyk-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tyk-ingress
  namespace: candig
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/backend-path-prefix: "/"
    appgw.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  rules:
    - host: tyk.CHANGE-ME.dhdp.ca
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tyk
                port:
                  number: 8080
